plugins {
    id 'java'
    id 'application'
}

assert gradle.gradleVersion == '2.3'

version =  '1.0.0'
sourceCompatibility = 1.8

repositories {
    jcenter()
}

dependencies {
    compile("commons-io:commons-io:2.4")
    compile("com.amazonaws:aws-java-sdk:1.9.22")
    compile("io.pivotal.labs:cf-env:0.0.1")

    testCompile("junit:junit:4.12")
    testCompile("org.hamcrest:hamcrest-library:1.3")
    testCompile("com.squareup.okhttp:mockwebserver:2.2.0")
}

mainClassName = "io.pivotal.dis.ingest.config.ApplicationConfig"

run.environment = [
        AWS_ACCESS_KEY_ID: awsAccessKeyId,
        AWS_SECRET_KEY: awsSecretKey,
        S3_BUCKET_NAME_RAW: s3BucketNameRaw,
        S3_BUCKET_NAME_DIGESTED: s3BucketNameDigested,
        VCAP_SERVICES: "{\"\": [{\"name\": \"tfl\", \"credentials\": {\"uri\": \"${tflUrl}\"}, \"label\": \"\", \"tags\": []}]}"
]
